# warehouse

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: README  env.py
alembic/versions/: 09ff41a4d569_initial_migration.py  22d8d11d0180_initial_migration.py  61138e243914_initial_migration.py  d6961d6063a7_initial_migration.py
app/: config.py  database.py  main.py  models.py  repositories.py  schemas.py  services.py
app/crud/: orders.py  products.py
app/routers/: orders.py  products.py
tests/: test_services.py
tests/test_crud/: test_orders.py
